Creates first version of page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<p>Nina</p>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Rome If You Want To</title>
+      <link rel="stylesheet" href="styles.css">
+   </head>
+
+   <body class="background-color">
+        <header id="title-header">
+            <h1>Rome If You Want To</h1>
+            <h2>Harris Honeymoon</h2>
+        </header>
+        <main class="container">
+        <div>
+            <p>For our honeymoon, my husband and I went to Italy for 2 1/2 weeks! We were so excited to get free champagne on the plane!</p>
+            <img src="./images/champagne_on_the_plane.jpg">
+        </div>
+        <div>
+            <p>Our first week of the trip we planned on being Rome, where we would have an opportunity to meet and greet the Pope, along with many other newlywed couples from around the world</p>
+            <img src="./images/pope.jpg">
+                <article>
+                    <h2>When In Rome...</h2>
+                    <p>After being up since 4:30 AM and not being able to eat or drink anything until the Papal audience was over around 10:30 AM, needless to say we were exhausted and in desperate need of sleep. We took the break we needed and then didn't waste a moment of our Roman Holiday to continue living in the special moment.</p>
+                </article>
+        </div>
+        <div>
+            <p>During on week in Rome we walked over 25,000 steps a day! We explored as much of Rome as possible and enjoyed every minute of it.</p>
+            <img src="./images/rome.jpg">
+        </div>
+        <div>
+            <p>We even made a day trip to Assisi!</p>
+            <img src="./images/assisi.jpg">
+        </div>
+        <div>
+            <p>For the second week of our Italian adventure, we traveled to Sicily, where my maternal ancestry stems from. Although I had lived in Rome previously, I had never been there before.</p>
+            <img src="./images/sicilian_scenery.jpg">
+        </div>
+        <div>
+            <p>Another strong incentive for wanting to go to Sicily is to meet my mom's first cousin, who lives there, for the first time.</p>
+            <img src="./images/silvana.jpg">
+        </div>
+        <div>
+            <p>After such an active week in Rome, we spent the majority of the time in Sicily relaxing in a beach cabana drinking tasty Italian drinks while soaking up the beautiful scenery.</p>
+            <img src="./images/sicilian_beach.jpg">
+        </div>
+        <div>
+            <p>Probably one of the most memorable parts of our journey in Sicily was driving through the Sicilian countryside in a rental car. We had no idea there was such a vast variety in types of landscape and scenery.</p>
+            <img src="./images/sicily2.jpg">
+        </div>
+        <div>
+            <p>We had so many incredible experiencea and couldn't have asked for a better time, even though we had to sleep in one of the London Airport cafes on the way home, which was less than ideal.</p>
+            <img src="./images/london_airport_cafe.jpg">
+        </div>
+        </main>
+        <footer id="footer">
+            <h3>Hope you enjoyed learning a little bit about our fantastic honeymoon to Italy! </br>We highly recommend taking a trip there once the world gets back to pre-COVID vibes. &copy;</h3>
+        </footer>
+   </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
