Fixed up CSS and made it perty

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       <link rel="stylesheet" href="styles.css">
    </head>
 
-   <body class="background-color">
+   <body id="header-container" class="background-color">
         <header id="title-header">
             <h1>Rome If You Want To</h1>
             <h2>Harris Honeymoon</h2>
         </header>
         <main class="container">
         <div>
-            <p>For our honeymoon, my husband and I went to Italy for 2 1/2 weeks! We were so excited to get free champagne on the plane!</p>
+            <p>For our honeymoon in 2016, my husband and I went to Italy for 2 1/2 weeks! </br> We were so excited to get free champagne on the plane!</p>
             <img src="./images/champagne_on_the_plane.jpg">
         </div>
         <div>
